# kmp2

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cmake.sh  debug.mk  meson.build  run-debug.sh
src/: app.cc  app.hh  color.hh  defaults.hh  input.cc  input.hh  main.cc  meson.build  mpris.cc  mpris.hh  play.cc  play.hh  search.cc  search.hh  song.cc  song.hh  utils.cc  utils.hh
